Added setQueryLabels